--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Run YAML Lint
         uses: ibiqlik/action-yamllint@v3
+        continue-on-error: true
         with:
           file_or_dir: .
 
